--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: all_of_them
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.0+2
 
 environment:
   sdk: ^3.5.1
@@ -30,7 +30,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -50,10 +49,10 @@ dependencies:
   multi_dropdown: ^2.1.4
   loading_animation_widget: ^1.2.1
   grouped_list: ^5.1.2
-#  table_calendar: ^3.0.9
+  #  table_calendar: ^3.0.9
   #  animated_toggle_switch: ^0.8.2
   #  image_picker: ^1.1.2
-#  qr_flutter: ^4.1.0
+  #  qr_flutter: ^4.1.0
   #  url_launcher: ^6.3.0
   contained_tab_bar_view: ^0.8.0
 
@@ -62,12 +61,10 @@ dependencies:
   flutter_riverpod: ^2.0.2
   uuid: ^4.2.2
 
-
 flutter_launcher_icons:
   android: "launcher_icon"
   image_path: "asset/img/logo/app_icon.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
-
 
 dev_dependencies:
   flutter_test:
@@ -87,7 +84,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -108,7 +104,6 @@ flutter:
     - asset/img/partner/
     - asset/img/place/
     - asset/img/festival/
-
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
